--- a/ProjectBuilder/app/src/main/res/layout/activity_main.xml
+++ b/ProjectBuilder/app/src/main/res/layout/activity_main.xml
@@ -4,63 +4,98 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
+    android:background="#3a6ae4"
+    android:weightSum="1">
+
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="E-Mail: "/>
+        android:orientation="horizontal"
+        android:weightSum="1"
+        android:gravity="center">
+
+
+        <ImageView
+            android:layout_width="68dp"
+            android:layout_height="150dp"
+            android:id="@+id/imageView"
+            android:src="@drawable/title"
+            android:layout_weight="0.19" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingBottom="5dp">
+
         <EditText
-            android:layout_width="300px"
-            android:layout_height="wrap_content"
-            android:id="@+id/email"/>
+            android:layout_width="fill_parent"
+            android:layout_height="50dp"
+            android:inputType="textEmailAddress"
+            android:paddingBottom="2dp"
+            android:textColorHint="#9e9e9e"
+            android:paddingLeft="10dp"
+            android:ems="10"
+            android:hint="E-MAIL"
+            android:background="@drawable/border"
+            android:id="@+id/email" />
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:paddingBottom="5dp"
         android:orientation="horizontal">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Password: "/>
 
-    <EditText
-        android:layout_width="250px"
-        android:layout_height="wrap_content"
-        android:id="@+id/passwd"/>
-        </LinearLayout>
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:paddingBottom="2dp"
+            android:inputType="textPassword"
+            android:paddingLeft="10dp"
+            android:ems="10"
+            android:hint="PASSWORD"
+            android:id="@+id/passwd"
+            android:textColorHint="#9e9e9e"
+            android:layout_weight="1"
+            android:background="@drawable/border"
+            android:autoText="false" />
+
+    </LinearLayout>
+
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="login"
-            android:id="@+id/login"/>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="sign up"
-            android:id="@+id/signup"/>
-    </LinearLayout>
-    <TextView
-        android:id="@+id/testtext"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="아직 "/>
+        android:paddingBottom="10px"
+        android:orientation="horizontal"
+        android:gravity="center">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="응답없음"
-        android:id="@+id/rep"
-        android:layout_gravity="center_horizontal" />
+
+        <Button
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="10px"
+            android:text="Sign Up"
+            android:textColor="#ffffff"
+            android:textSize="30px"
+            android:id="@+id/signup"
+            android:background="@drawable/login_button_border" />
+
+        <Button
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="10px"
+            android:textColor="#ffffff"
+            android:textSize="30px"
+            android:text="log in"
+            android:id="@+id/login"
+            android:background="@drawable/login_button_border" />
+
+    </LinearLayout>
 
 
 </LinearLayout>
