--- a/ProjectBuilder/app/src/main/res/layout/project_list.xml
+++ b/ProjectBuilder/app/src/main/res/layout/project_list.xml
@@ -1,29 +1,22 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent"  android:orientation="vertical"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:layout_height="match_parent" android:fitsSystemWindows="true"
     tools:context="com.example.sanghee.myapplication.PjListActivity">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:text="프로젝트"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:background="#dddddd"/>
 
     <ListView
         android:id="@+id/listview"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="400dp"
         android:layout_marginTop="5dp"/>
 
-    <Button android:id="@+id/addBtn"
-        android:text="Add"
-        android:layout_height="59dp"
-        android:layout_width="357dp"/>
+    <include layout="@layout/content_main" />
 
-</LinearLayout>
+    <android.support.design.widget.FloatingActionButton android:id="@+id/addBtn"
+        android:layout_width="wrap_content" android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end" android:layout_margin="@dimen/fab_margin"
+        android:src="@android:drawable/ic_input_add" />
+
+</android.support.design.widget.CoordinatorLayout>
