--- a/ProjectBuilder/app/src/main/res/layout/sign_up.xml
+++ b/ProjectBuilder/app/src/main/res/layout/sign_up.xml
@@ -3,102 +3,121 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" android:orientation="vertical" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
+    android:background="#3a6ae4"
+    tools:context=".MainActivity">
 
 
     <LinearLayout
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_width="match_parent"
+
         android:layout_height="wrap_content">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="이메일:"
+            android:textColor="#ffffff"
+            android:text="E-MAIL"
             android:id="@+id/m_email"
-            android:textSize="25dp" />
+            android:textSize="30px" />
 
         <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:textColor="#ffffff"
             android:inputType="textEmailAddress"
             android:ems="10"
             android:id="@+id/input_email"
-            android:hint="이메일 입력."
-            android:gravity="center" />
+
+          />
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id ="@+id/root">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="패스워드:"
+            android:textColor="#ffffff"
+            android:text="PASSWAORD"
             android:id="@+id/m_password"
-            android:textSize="25dp" />
+            android:textSize="30px" />
 
 
         <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:textColor="#ffffff"
             android:inputType="textPassword"
             android:ems="10"
             android:id="@+id/input_passwd"
-            android:hint="패스워드 입력."
+
             android:gravity="center" />
     </LinearLayout>
     <LinearLayout
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_width="match_parent"
+        android:textColor="#ffffff"
         android:layout_height="wrap_content" >
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="패스워드확인:"
+            android:textColor="#ffffff"
+            android:text="PW CHECK"
             android:id="@+id/m_confpasswd"
             android:textSize="15dp" />
 
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:ems="10"
-            android:id="@+id/confirm_passwd"
-            android:hint="패스워드 확인"
-            android:gravity="center" />
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:id="@+id/TextVIew_PwdProblem"
-            android:textStyle="bold"
-            android:gravity="center" />
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="fill_parent"
+                android:inputType="textPassword"
+                android:textColor="#ffffff"
+                android:ems="10"
+                android:id="@+id/confirm_passwd"
+
+                android:gravity="center" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textColor="#ffffff"
+                android:id="@+id/TextVIew_PwdProblem"
+                android:textStyle="bold"
+                android:gravity="center" />
+        </LinearLayout>
+
     </LinearLayout>
     <LinearLayout
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal">
+        android:layout_height="wrap_content">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="이름:"
+            android:textColor="#ffffff"
+            android:text="NAME"
             android:id="@+id/m_name"
-            android:textSize="25dp" />
+            android:textSize="30px" />
 
 
         <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:inputType="textPersonName"
+            android:textColor="#ffffff"
             android:ems="10"
             android:id="@+id/input_name"
-            android:hint="이름을 입력해주세요."
             android:gravity="center" />
     </LinearLayout>
 
@@ -110,12 +129,15 @@
         android:layout_height="wrap_content"
         android:gravity="center">
 
+
         <Button
-            android:layout_width="150dp"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="가입하기"
+            android:textColor="#ffffff"
+            android:text="CREATE"
             android:id="@+id/new_member_button"
-            android:onClick="Button1OnClicked" />
+            android:background="@drawable/login_button_border"
+             />
     </LinearLayout>
 
 </LinearLayout>
