--- a/ProjectBuilder/app/src/main/res/drawable/button_border.xml
+++ b/ProjectBuilder/app/src/main/res/drawable/button_border.xml
@@ -4,7 +4,7 @@
     android:shape="rectangle" >
 
     <solid
-        android:color="#3aa9e4"/>
+        android:color="#3a6ae4"/>
 
     <corners
         android:bottomLeftRadius="5dp"
@@ -15,5 +15,8 @@
     <stroke
         android:width="2px"
         android:color="#ffffff" />
+
+    <solid android:state_pressed="true"
+        android:color="#275be1"/>
 
 </shape>
