--- a/ProjectBuilder/app/src/main/res/layout/list_row.xml
+++ b/ProjectBuilder/app/src/main/res/layout/list_row.xml
@@ -1,52 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="70dp"
-    android:orientation="horizontal" android:padding="3dp"
-    android:background="#dddddd" android:weightSum="10"
-    android:layout_margin="20dp"
-    >
-
-
-    <ImageView android:id="@+id/img_flag"
-        android:layout_width="0dp"
-        android:layout_height="64dp"
-        android:layout_weight="3"
-        android:background="#ffffff"
-        android:layout_marginLeft="3dp"/>
-
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="7"
-        android:orientation="vertical"
-        android:weightSum="5"
-        >
-
-        <TextView android:id="@+id/text_name"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="3"
-            android:text="PROJECT NAME"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:gravity="center_vertical"
-            android:background="#ffffff"
-            android:padding="3dp"/>
-
-        <TextView android:id="@+id/text_date"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="2"
-            android:text="INFORMATION"
-            android:gravity="center_vertical"
-            android:layout_marginTop="2dp"
-            android:background="#ffffff"
-            android:padding="3dp"/>
-
-    </LinearLayout>
-
-
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/p_name"
+                android:textSize="30dp"
+                android:layout_width="fill_parent"
+                android:layout_height="66dp"
+                android:padding="5dp"
+                />
+        </LinearLayout>
 
 
 </LinearLayout>
