--- a/ProjectBuilder/app/src/main/res/drawable/text_border.xml
+++ b/ProjectBuilder/app/src/main/res/drawable/text_border.xml
@@ -14,6 +14,6 @@
 
     <stroke
         android:width="1dp"
-        android:color="#4359c4" />
+        android:color="#40000000" />
 
-    </shape>
+</shape>
