--- a/ProjectBuilder/app/src/main/res/layout/activity_addtask.xml
+++ b/ProjectBuilder/app/src/main/res/layout/activity_addtask.xml
@@ -1,40 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:layout_height="match_parent" android:fitsSystemWindows="true"
     tools:context="com.pb.projectbuilder.Activity.AddTask">
 
+    <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
+        android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar android:id="@+id/a_toolbar"
+            android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
+            android:background="@color/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </android.support.design.widget.AppBarLayout>
+
+    <include layout="@layout/content_addtask" />
 
 
-    <EditText
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:hint="작업 이름"
-        android:id="@+id/taskname"/>
 
 
-    <EditText
-        android:layout_width="fill_parent"
-        android:hint="작업 내"
-        android:layout_height="wrap_content"
-        android:id="@+id/desc"/>
 
-    <DatePicker
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/due_date">
-
-    </DatePicker>
-
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="등록"
-        android:id="@+id/task_add_button"
-        android:layout_gravity="center_horizontal" />
-
-
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
