--- a/ProjectBuilder/app/src/main/res/layout/activity_login.xml
+++ b/ProjectBuilder/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
-    android:background="@color/colorPrimary"
+    android:background="#ffffff"
     android:weightSum="1">
 
     <LinearLayout
@@ -37,10 +37,10 @@
             android:layout_height="50dp"
             android:inputType="textEmailAddress"
             android:paddingBottom="2dp"
-            android:textColorHint="#9e9e9e"
+            android:textColorHint="#86000000"
             android:paddingLeft="10dp"
             android:ems="10"
-            android:hint="E-MAIL"
+            android:hint="e-mail"
             android:background="@drawable/border"
             android:id="@+id/email" />
 
@@ -59,9 +59,9 @@
             android:inputType="textPassword"
             android:paddingLeft="10dp"
             android:ems="10"
-            android:hint="PASSWORD"
+            android:hint="password"
             android:id="@+id/passwd"
-            android:textColorHint="#9e9e9e"
+            android:textColorHint="#86000000"
             android:layout_weight="1"
             android:background="@drawable/border"
             android:autoText="false" />
