--- a/ProjectBuilder/app/src/main/res/layout/app_bar_project_main.xml
+++ b/ProjectBuilder/app/src/main/res/layout/app_bar_project_main.xml
@@ -9,9 +9,10 @@
     <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
         android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">
 
-        <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
+        <android.support.v7.widget.Toolbar android:id="@+id/m_toolbar"
             android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
-            android:background="@color/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay" />
+            android:background="@color/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay"
+            android:title="@string/project"/>
 
     </android.support.design.widget.AppBarLayout>
 
