--- a/ProjectBuilder/app/src/main/res/layout/fragment_board.xml
+++ b/ProjectBuilder/app/src/main/res/layout/fragment_board.xml
@@ -4,11 +4,7 @@
     tools:context="com.pb.projectbuilder.Fragment.BlankFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/tvTitle"
-        android:text="Fragment #X"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center" />
+    <include layout="@layout/content_comment_list" />
+
 
 </FrameLayout>
