--- a/ProjectBuilder/app/src/main/res/layout/fragment_main.xml
+++ b/ProjectBuilder/app/src/main/res/layout/fragment_main.xml
@@ -1,14 +1,40 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.pb.projectbuilder.Fragment.MainFragment">
-
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/tvTitle"
-        android:text="Fragment #X"
+   <!-- <include layout="@layout/calendar_layout" />-->
+    <com.pb.projectbuilder.View.CalendarView
+        android:id="@+id/robotoCalendarPicker"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center" />
+        android:layout_height="wrap_content">
+    </com.pb.projectbuilder.View.CalendarView>
+</LinearLayout>
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+     >
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="6dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:text="NOTICE"
+        android:textStyle="bold"
+        android:textSize="20dp"
+        />
+    <ListView
+        android:id="@+id/noticelist"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+         />
 
-</FrameLayout>
+</LinearLayout>
+
+</LinearLayout>
