--- a/ProjectBuilder/app/src/main/res/layout/list_row.xml
+++ b/ProjectBuilder/app/src/main/res/layout/list_row.xml
@@ -11,9 +11,9 @@
             android:orientation="vertical">
             <TextView
                 android:id="@+id/p_name"
-                android:textSize="30dp"
+                android:textSize="25dp"
                 android:layout_width="fill_parent"
-                android:layout_height="66dp"
+                android:layout_height="wrap_content"
                 android:padding="5dp"
                 />
         </LinearLayout>
