--- a/ProjectBuilder/app/src/main/res/menu/activity_project_main_drawer.xml
+++ b/ProjectBuilder/app/src/main/res/menu/activity_project_main_drawer.xml
@@ -2,23 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
-        <item android:id="@+id/nav_camara" android:icon="@android:drawable/ic_menu_camera"
-            android:title="Import" />
-        <item android:id="@+id/nav_gallery" android:icon="@android:drawable/ic_menu_gallery"
-            android:title="Gallery" />
-        <item android:id="@+id/nav_slideshow" android:icon="@android:drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
-        <item android:id="@+id/nav_manage" android:icon="@android:drawable/ic_menu_manage"
-            android:title="Tools" />
+        <item android:id="@+id/nav_add_member" android:icon="@android:drawable/ic_menu_help"
+            android:title="Add member" />
+        <item android:id="@+id/add_task" android:icon="@android:drawable/ic_menu_slideshow"
+            android:title="Add task" />
+        <item android:id="@+id/add_board" android:icon="@android:drawable/ic_menu_edit"
+            android:title="Add board" />
+
     </group>
 
-    <item android:title="Communicate">
-        <menu>
-            <item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_share"
-                android:title="Share" />
-            <item android:id="@+id/nav_send" android:icon="@android:drawable/ic_menu_send"
-                android:title="Send" />
-        </menu>
-    </item>
+
 
 </menu>
