--- a/ProjectBuilder/app/src/main/res/values/dimens.xml
+++ b/ProjectBuilder/app/src/main/res/values/dimens.xml
@@ -6,4 +6,22 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
     <dimen name="nav_header_height">160dp</dimen>
+
+    <!-- dateTitleLayout -->
+    <dimen name="roboto_calendar_date_title_font">16sp</dimen>
+    <dimen name="roboto_calendar_date_title_padding_bottom">5dp</dimen>
+
+    <!-- weekLayout -->
+    <dimen name="roboto_calendar_day_of_week_font">14sp</dimen>
+
+    <!-- weekRowLayout -->
+    <dimen name="roboto_calendar_week_bottom_padding">5dp</dimen>
+
+    <!-- Day of the month -->
+    <dimen name="roboto_calendar_underline_weight">6dp</dimen>
+    <dimen name="roboto_calendar_underline_height">2dp</dimen>
+    <dimen name="roboto_calendar_day_of_month_background_size">32dp</dimen>
+    <dimen name="roboto_calendar_day_of_month_indicator_size">3dp</dimen>
+    <dimen name="roboto_calendar_day_of_month_image_margin_top">20dp</dimen>
+    <dimen name="roboto_calendar_padding">8dp</dimen>
 </resources>
