--- a/ProjectBuilder/app/src/main/res/layout/activity_projectlist.xml
+++ b/ProjectBuilder/app/src/main/res/layout/activity_projectlist.xml
@@ -8,10 +8,23 @@
     <include layout="@layout/app_bar_project_list" android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+
     <android.support.design.widget.NavigationView android:id="@+id/nav_view"
         android:layout_width="wrap_content" android:layout_height="match_parent"
         android:layout_gravity="start" android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_project_list"
-        app:menu="@menu/activity_projectlist_drawer" />
+        app:menu="@menu/activity_projectlist_drawer" >
+        <ListView android:layout_width="240dp"
+            android:paddingTop="55dp"
+            android:layout_height="match_parent"
+            android:id="@+id/my_task_list"
+            />
+        </android.support.design.widget.NavigationView>
+
+
+
+
+
+
 
 </android.support.v4.widget.DrawerLayout>
