--- a/ProjectBuilder/app/src/main/res/layout/content_task_info.xml
+++ b/ProjectBuilder/app/src/main/res/layout/content_task_info.xml
@@ -55,6 +55,7 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:background="@drawable/text_border">
 
         <TextView
@@ -62,18 +63,13 @@
             android:textSize="20dp"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"/>
-    </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
 
         <ListView
             android:id="@+id/member_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/text_border"
+
             />
     </LinearLayout>
 
