--- a/ProjectBuilder/app/src/main/res/drawable/border.xml
+++ b/ProjectBuilder/app/src/main/res/drawable/border.xml
@@ -14,6 +14,6 @@
 
     <stroke
         android:width="1dp"
-        android:color="#4359c4" />
+        android:color="#477de1" />
 
     </shape>
