--- a/ProjectBuilder/app/src/main/res/drawable/button_border.xml
+++ b/ProjectBuilder/app/src/main/res/drawable/button_border.xml
@@ -4,7 +4,7 @@
     android:shape="rectangle" >
 
     <solid
-        android:color="#3a6ae4"/>
+        android:color="#1d7fe1"/>
 
     <corners
         android:bottomLeftRadius="5dp"
@@ -17,6 +17,6 @@
         android:color="#ffffff" />
 
     <solid android:state_pressed="true"
-        android:color="#275be1"/>
+        android:color="#7193ec"/>
 
 </shape>
