--- a/ProjectBuilder/app/src/main/res/layout/activity_login.xml
+++ b/ProjectBuilder/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
-    android:background="#ffffff"
+    android:background="#2e87df"
     android:weightSum="1">
 
     <LinearLayout
