--- a/ProjectBuilder/app/src/main/res/layout/activity_signup.xml
+++ b/ProjectBuilder/app/src/main/res/layout/activity_signup.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    android:background="@color/colorPrimary"
+    android:background="#2e87df"
     tools:context=".MainActivity">
 
 
