--- a/ProjectBuilder/app/src/main/res/layout/activity_start.xml
+++ b/ProjectBuilder/app/src/main/res/layout/activity_start.xml
@@ -4,7 +4,7 @@
     android:id="@+id/splashLayout"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@color/colorPrimary"
+    android:background="#2e87df"
     android:onClick="hn_splashOnclick"
     tools:context="com.pb.projectbuilder.Activity.Splash"
     android:orientation="horizontal">
